--- a/index.html
+++ b/index.html
@@ -60,14 +60,6 @@
                       </ul>
                 </div>
             </div>
-
-
-
-
-
-
-
-            
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -77,7 +69,47 @@
           </nav>
     </header>
     <section class="udeCarousel"></section>
-    <section class="intro"></section>
+    <section class="intro">
+        <div class="intro__content">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="intro__item d-flex">
+                        <div class="icon">
+                            <i class="fa fa-bullseye"></i>
+                        </div>
+                        <div class="icon__content">
+                            <p>100,000 online courses</p>
+                            <p>Explore a variety of fresh topics</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="intro__item d-flex">
+                        <div class="icon">
+                            <i class="fa fa-check"></i>
+                        </div>
+                        <div class="icon__content">
+                            <p>100,000 online courses</p>
+                            <p>Explore a variety of fresh topics</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="intro__item d-flex">
+                        <div class="icon">
+                            <i class="fa fa-history"></i>
+                        </div>
+                        <div class="icon__content">
+                            <p>100,000 online courses</p>
+                            <p>Explore a variety of fresh topics</p>
+                        </div>
+                    </div>
+
+                    
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="courses"></section>
     <section class="services"></section>
     <section class="students"></section>
