add services section

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                             <i class="fa fa-check"></i>
                         </div>
                         <div class="icon__content">
-                            <p>100,000 online courses</p>
-                            <p>Explore a variety of fresh topics</p>
+                            <p>Expert instruction</p>
+                            <p>Find the right instructor for you</p>
                         </div>
                     </div>
                 </div>
@@ -100,18 +100,55 @@
                             <i class="fa fa-history"></i>
                         </div>
                         <div class="icon__content">
-                            <p>100,000 online courses</p>
-                            <p>Explore a variety of fresh topics</p>
+                            <p>Lifetime access</p>
+                            <p>Learn on your schedule</p>
                         </div>
                     </div>
-
-                    
                 </div>
             </div>
         </div>
     </section>
     <section class="courses"></section>
-    <section class="services"></section>
+    <section class="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 px-2">
+                    <div class="services__item d-flex">
+                        <div class="service__icon">
+                            <img src="./img/service_icon_2.svg" alt="">
+                        </div>
+                        <div class="service__content">
+                            <p>Go at your own pace</p>
+                            <p>Enjoy lifetime access to courses on Udemy’s website and app</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 px-2">
+                    <div class="services__item d-flex">
+                        <div class="service__icon">
+                            <img src="./img/service_icon_2.svg" alt="">
+                        </div>
+                        <div class="service__content">
+                            <p>Learn from industry experts</p>
+                            <p>Select from top instructors around the world</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 px-2">
+                    <div class="services__item d-flex">
+                        <div class="service__icon">
+                            <img src="./img/service_icon_3.svg" alt="">
+                        </div>
+                        <div class="service__content">
+                            <p>Find video courses on almost any topic</p>
+                            <p>Build your library for your career and personal growth</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </section>
     <section class="students"></section>
     <section class="banner"></section>
     <section class="topCategories"></section>
