complete partners section

--- a/index.html
+++ b/index.html
@@ -262,7 +262,36 @@
         </div>
     </section>
     <section class="feedback"></section>
-    <section class="partners"></section>
+    <section class="partners">
+        <div class="partner__top">
+            <div class="text">
+                Trusted by companies of all sizes
+            </div>
+            <div class="partner__logos">
+                <div class="logo__item"><img src="./img/booking.svg" alt="booking"></div>
+                <div class="logo__item"><img src="./img/volkswagen.svg" alt="volkswagen"></div>
+                <div class="logo__item"><img src="./img/mercedes.svg" alt="mercedes"></div>
+                <div class="logo__item"><img src="./img/pinterest.svg" alt="pinterest"></div>
+                <div class="logo__item"><img src="./img/adidas.svg" alt="adidas"></div>
+                <div class="logo__item"><img src="./img/eventbrite.svg" alt="eventbrite"></div>
+            </div>
+        </div>
+        <div class="partner__bottom">
+            <div class="row">
+                <div class="col-6 item">
+                    <p><a href="#"> Become an instructor</a></p>
+                    <p>Top instructors from around the world teach millions of students on Udemy. We provide the tools and skills to teach what you love.
+                    </p>
+                    <button class="udeBTN-red">Start teaching today</button>
+                </div>
+                <div class="col-6 item">
+                    <p><a href="#">Udemy for Business</a></p>
+                    <p>Get unlimited access to 4,000+ of Udemy’s top courses for your team.</p>
+                    <button class="udeBTN-red">Get Udemy for Business</button>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
         <hr>
         <div class="footer__top">
