add banner section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,58 @@
         
     </section>
     <section class="students"></section>
-    <section class="banner"></section>
+    <section class="banner">
+        <div class="top__border"></div>
+        <div class="banner__content">
+            <div class="row banner__item d-none d-lg-flex">
+                <div class="col">
+                    <i class="fab fa-youtube"></i>
+                </div>
+                <div class="col">
+                    <i class="fa fa-network-wired"></i>
+                </div>
+                <div class="col">
+                    <i class="fa fa-balance-scale"></i>
+                </div>
+                <div class="col">
+                    <i class="fa fa-place-of-worship"></i>
+                </div>
+                <div class="col">
+                    <i class="fa fa-font"></i>
+                </div>
+            </div>
+            <div class="row banner__item">
+                <div class="col-lg-4 d-none d-lg-block getStarted__out text-right">
+                    <i class="fab fa-react"></i>
+                </div>
+                <div class="col-12 col-lg-4 getStarted">
+                    <h4>Get personalized recommendations</h4>
+                    <p>Answer a few questions for your top picks</p>
+                    <button class="udeBTN-red">Get started</button>                   
+                </div>
+                <div class="col-lg-4 d-none d-lg-block text-left getStarted__out">
+                    <i class="fa fa-image"></i>
+                </div>
+            </div>
+            <div class="row banner__item d-none d-lg-flex">
+                <div class="col">
+                    <i class="fa fa-desktop"></i>
+                </div>
+                <div class="col">
+                    <i class="fa fa-heartbeat"></i>
+                </div>
+                <div class="col">
+                    <i class="fa fa-chart-bar"></i>
+                </div>
+                <div class="col">
+                    <i class="fa fa-vihara"></i>
+                </div>
+                <div class="col">
+                    <i class="fa fa-paint-brush"></i>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="topCategories">
         <h4 class="title">Top categories</h4>
         <div class="row cate__item">
