complete banner section

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
     <section class="students"></section>
     <section class="banner">
         <div class="top__border"></div>
-        <div class="banner__content">
-            <div class="row banner__item d-none d-lg-flex">
+        <div class="banner__content container-fluid">
+            <div class="row banner__item ">
                 <div class="col">
                     <i class="fab fa-youtube"></i>
                 </div>
@@ -171,7 +171,7 @@
                 </div>
             </div>
             <div class="row banner__item">
-                <div class="col-lg-4 d-none d-lg-block getStarted__out text-right">
+                <div class="col-lg-4 getStarted__out ">
                     <i class="fab fa-react"></i>
                 </div>
                 <div class="col-12 col-lg-4 getStarted">
@@ -179,11 +179,11 @@
                     <p>Answer a few questions for your top picks</p>
                     <button class="udeBTN-red">Get started</button>                   
                 </div>
-                <div class="col-lg-4 d-none d-lg-block text-left getStarted__out">
+                <div class="col-lg-4 getStarted__out">
                     <i class="fa fa-image"></i>
                 </div>
             </div>
-            <div class="row banner__item d-none d-lg-flex">
+            <div class="row banner__item ">
                 <div class="col">
                     <i class="fa fa-desktop"></i>
                 </div>
@@ -313,7 +313,7 @@
         </div>
     </section>
     <section class="feedback"></section>
-    <section class="partners">
+    <section class="partners container-fluid">
         <div class="partner__top">
             <div class="text">
                 Trusted by companies of all sizes
