complete udeCarousel section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,22 @@
             </div>
           </nav>
     </header>
-    <section class="udeCarousel"></section>
+    <section class="udeCarousel">
+        <div class="udeCarousel__content">
+            <h1>Learn on your schedule</h1>
+            <p>Study any topic, anytime. Choose from thousands of expert-led courses now.</p>
+            <form action="" class="header__form">
+                <div class="input-group ">
+                    <input type="text" class="form-control" placeholder="What do you want to learn?" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                      <span class="input-group-text" id="basic-addon2">
+                        <i class="fa fa-search"></i>
+                      </span>
+                    </div>
+                  </div>
+            </form>
+        </div>
+    </section>
     <section class="intro">
         <div class="intro__content">
             <div class="row">
