complete student are viewing section

--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,167 @@
         </div>
         
     </section>
-    <section class="students"></section>
+    <section class="students">
+        <div class="student__content">
+            <h3>Students are viewing</h3>
+            <div class="student__course owl-carousel owl-theme">
+                <div class="card">
+                    <img class="card-img-top" src="./img/kh8.jpg" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">The Complete Foundation Stock Trading Course</h4>
+                        <p class="card-text">Mohsen Hassan</p>
+                        <div class="rating">
+                            <span class="rating__star">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star-half-alt"></i>                   
+                            </span>
+                            <span>4.5</span>
+                            <span>(17,931)</span>
+                        </div>
+                        <div class="price">
+                            <span class="old__price">$134.99</span>
+                            <span class="new__price">$15.99</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="./img/kh9.jpg" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">The Complete Foundation Stock Trading Course</h4>
+                        <p class="card-text">Mohsen Hassan</p>
+                        <div class="rating">
+                            <div class="rating__star">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star-half-alt"></i>                   
+                            </div>
+                            <span>4.5</span>
+                            <span>(17,931)</span>
+                        </div>
+                        <div class="price">
+                            <span class="old__price">$134.99</span>
+                            <span class="new__price">$15.99</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="./img/kh10.jpg" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">The Complete Foundation Stock Trading Course</h4>
+                        <p class="card-text">Mohsen Hassan</p>
+                        <div class="rating">
+                            <div class="rating__star">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star-half-alt"></i>                   
+                            </div>
+                            <span>4.5</span>
+                            <span>(17,931)</span>
+                        </div>
+                        <div class="price">
+                            <span class="old__price">$134.99</span>
+                            <span class="new__price">$15.99</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="./img/kh11.jpg" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">The Complete Foundation Stock Trading Course</h4>
+                        <p class="card-text">Mohsen Hassan</p>
+                        <div class="rating">
+                            <div class="rating__star">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star-half-alt"></i>                   
+                            </div>
+                            <span>4.5</span>
+                            <span>(17,931)</span>
+                        </div>
+                        <div class="price">
+                            <span class="old__price">$134.99</span>
+                            <span class="new__price">$15.99</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="./img/kh12.jpg" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">The Complete Foundation Stock Trading Course</h4>
+                        <p class="card-text">Mohsen Hassan</p>
+                        <div class="rating">
+                            <div class="rating__star">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star-half-alt"></i>                   
+                            </div>
+                            <span>4.5</span>
+                            <span>(17,931)</span>
+                        </div>
+                        <div class="price">
+                            <span class="old__price">$134.99</span>
+                            <span class="new__price">$15.99</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="./img/kh13.jpg" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">The Complete Foundation Stock Trading Course</h4>
+                        <p class="card-text">Mohsen Hassan</p>
+                        <div class="rating">
+                            <div class="rating__star">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star-half-alt"></i>                   
+                            </div>
+                            <span>4.5</span>
+                            <span>(17,931)</span>
+                        </div>
+                        <div class="price">
+                            <span class="old__price">$134.99</span>
+                            <span class="new__price">$15.99</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="./img/kh14.jpg" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">The Complete Foundation Stock Trading Course</h4>
+                        <p class="card-text">Mohsen Hassan</p>
+                        <div class="rating">
+                            <div class="rating__star">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star-half-alt"></i>                   
+                            </div>
+                            <span>4.5</span>
+                            <span>(17,931)</span>
+                        </div>
+                        <div class="price">
+                            <span class="old__price">$134.99</span>
+                            <span class="new__price">$15.99</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="banner">
         <div class="top__border"></div>
         <div class="banner__content container-fluid">
@@ -1477,6 +1637,31 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
     <script src="./js/owl.carousel.min.js"></script>
+    <script>
+        $('.student__course').owlCarousel({
+            loop:true,
+            margin:10,
+            nav:true,
+            dots: false,
+            responsive:{
+                0:{
+                    items:1
+                },
+                500:{
+                    items:3
+                },
+                992:{
+                    items:4
+                },
+                1200:{
+                    items:5
+                },
+                1440:{
+                    items:6
+                }
+            }
+        })
+    </script>
     <script>
         $('.owl-carousel').owlCarousel({
             loop:true,
