--- a/index.html
+++ b/index.html
@@ -1487,7 +1487,61 @@
             </div>
         </div>
     </section>
-    <section class="feedback"></section>
+    <section class="feedback container-fluid">
+        <div class="feedback__content">
+            <h3>What our students have to say</h3>
+            <div class="feedback__item owl-carousel owl-theme">
+                <div class="card">
+                    <div class="title">
+                        <img src="./img/fb1.jpg" alt="Card image">
+                        <span>Borivoje</span>
+                    </div>
+                    <p class="card-text">Udemy is a life saver. I don't have the time or money for a college education. My goal is
+                        to become a freelance web developer, and thanks to Udemy, I'm really close.</p>
+                </div>
+                <div class="card">
+                    <div class="title">
+                        <img src="./img/fb2.jpg" alt="Card image">
+                        <span>Dipesh</span>
+                    </div>
+                    <p class="card-text">I believe in lifelong learning and Udemy is a great place to learn from experts. I've
+                        learned a lot and recommend it to all my friends.</p>
+                </div>
+                <div class="card">
+                    <div class="title">
+                        <img src="./img/fb3.jpg" alt="Card image">
+                        <span>Kathy</span>
+                    </div>
+                    <p class="card-text">My children and I LOVE Udemy! The courses are fantastic and the instructors are so fun and
+                        knowledgeable. I only wish we found it sooner.</p>
+                </div>
+                <div class="card">
+                    <div class="title">
+                        <img src="./img/fb3.jpg" alt="Card image">
+                        <span>Zulaika</span>
+                    </div>
+                    <p class="card-text">I work in project management and joined Udemy because I get great courses for less. The
+                        instructors are fantastic, interesting, and helpful. I plan to use Udemy for a long time!</p>
+                </div>
+                <div class="card">
+                    <div class="title">
+                        <img src="./img/fb4.jpg" alt="Card image">
+                        <span>Marco</span>
+                    </div>
+                    <p class="card-text">Thank you Udemy! You've renewed my passion for learning and my dream of becoming a web
+                        developer.</p>
+                </div>
+                <div class="card">
+                    <div class="title">
+                        <img src="./img/fb4.jpg" alt="J">
+                        <span>Justin</span>
+                    </div>
+                    <p class="card-text">The best part about Udemy is the selection. You can find a course for anything you want to
+                        learn!</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="partners container-fluid">
         <div class="partner__top">
             <div class="text">
@@ -1658,6 +1712,25 @@
                 },
                 1440:{
                     items:6
+                }
+            }
+        })
+    </script>
+    <script>
+        $('.feedback__item').owlCarousel({
+            loop:true,
+            margin:10,
+            nav:true,
+            dots: false,
+            responsive:{
+                0:{
+                    items:1
+                },
+                576:{
+                    items:2
+                },
+                992:{
+                    items:3
                 }
             }
         })
