--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
         </div>
     </section>
     <section class="intro">
-        <div class="intro__content">
+        <div class="intro__content d-md-block d-none">
             <div class="row">
                 <div class="col-md-4">
                     <div class="intro__item d-flex">
-                        <div class="icon">
+                        <div class="icon  d-none d-xl-block">
                             <i class="fa fa-bullseye"></i>
                         </div>
                         <div class="icon__content">
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="intro__item d-flex">
-                        <div class="icon">
+                        <div class="icon d-none d-xl-block">
                             <i class="fa fa-check"></i>
                         </div>
                         <div class="icon__content">
@@ -115,7 +115,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="intro__item d-flex">
-                        <div class="icon">
+                        <div class="icon d-none d-xl-block">
                             <i class="fa fa-history"></i>
                         </div>
                         <div class="icon__content">
